--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
     <h1>Le Wagon Berlin</h1>
     <p>Learn to code with us in Berlin</p>
     <% if user_signed_in? %>
-      <%= link_to t(".index", default: "Mes colocations"),colocations_path, method: :get, class: "btn btn-primary btn-lg" %>
+      <%= link_to t(".index", default: "Mes colocations"),user_groups_path, method: :get, class: "btn btn-primary btn-lg" %>
     <% else %>
       <%= link_to t(".sign_up", default: "Sign Up"), new_user_registration_path, class: "btn btn-primary btn-lg" %>
     <% end %>
