--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,6 +21,9 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+    <% if @token != nil %>
+        <%= hidden_field_tag :invite_token, @token %>
+    <% end %>
   </div>
 
   <div class="form-actions">
